# digester

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: nightly.yaml
digester/: emailer.py  job.py  report.py  spotify.py
tests/: test_emailer.py  test_job.py  test_report.py  test_spotify.py
